--- a/_posts/2019-05-30-App Store上架流程.md
+++ b/_posts/2019-05-30-App Store上架流程.md
@@ -13,7 +13,7 @@ tags:
     - HbuilderX
 ---
 
-# App Store上架流程
+# Apple Store上架流程
 
 ## 前期准备
 * 必须要有苹果开发者账号，并且已经加入‘IOS Developer Program’
@@ -49,6 +49,7 @@ tags:
 * 在这之后打开在线iTunes Connect创建一个APP
 ![](media/15590363197742/15590457983946.jpg)
 创建好之后，先不要修改里面选项，等待后面会再设置里面的选项。直到这里APP IDs已经创建完毕。
+
 #### 2、申请IOS开发证书
 * 打开钥匙串，在左上角钥匙串访问下拉菜单中选择证书助理->从证书颁发机构请求证书。
 ![](media/15590363197742/15590461695275.jpg)
@@ -76,7 +77,8 @@ tags:
 申请成功后，返回到APP IDs中查看，这里发布版本的推送功能是为绿色Enable状态。
 ![](media/15590363197742/15590525055483.jpg)
 
-### 申请IOS发布描述文件
+
+#### 3、申请IOS发布描述文件
 * 创建授权文件（也叫配置文件或描述文件）
 ![](media/15590363197742/15590526479877.jpg)
 ![](media/15590363197742/15590527084117.jpg)
@@ -96,13 +98,15 @@ tags:
 2. 在钥匙串中右键导出证书
 ![](media/15590363197742/15590535377495.jpg)
 修改证书名称即可确定。
-#### 使用HbuilderX云打包应用
+
+#### 4、使用HbuilderX云打包应用
 * 打开HBuilderX中发行菜单下的->原生APP-云打包
 ![](media/15590363197742/15590550382764.jpg)
 ![](media/15590363197742/15590552178676.jpg)
 之后点击提交，服务端会自动打包应用，打包完成后会给出一个下载链接。
 ![](media/15590363197742/15590553096987.jpg)
-##### 使用Application Loader上传IPA文件
+
+#### 5、使用Application Loader上传IPA文件
 * 打开XCode中Application Loader，在这里登录你的苹果开发账号
 ![](media/15590363197742/15590558739060.jpg)
 ![](media/15590363197742/15590570014095.jpg)
@@ -115,7 +119,8 @@ tags:
 ![](media/15590363197742/15590916178495.jpg)
 
 
-* 之后在Apple Store Connect的后台中填写提交的APP信息--APP名称、副标题、截图、预览视频等
+#### 6、在App Store Connect上填写应用信息
+* 之后在App Store Connect的后台中填写提交的APP信息--APP名称、副标题、截图、预览视频等
 * APP的其他信息可以根据公司的要求来填写，填写完成之后点击右上角存储之后，就可以点击’提交以供审核‘
 ![](media/15590363197742/15590942038910.jpg)
 
